--- a/GA_Query_Classify_Cluster/build.gradle
+++ b/GA_Query_Classify_Cluster/build.gradle
@@ -4,7 +4,7 @@ repositories { jcenter() }
 
 dependencies {
 
-	//compile 'org.codehaus.groovy:groovy-all:2.4.3'
+//	compile 'org.codehaus.groovy:groovy-all:2.4.3'
 	compile 'org.codehaus.groovy:groovy-all:2.4.7'
 
 	compile 'org.apache.lucene:lucene-core:6.1.0'
@@ -16,7 +16,9 @@ dependencies {
 	//compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.1.0'
 	//	compile 'org.apache.lucene:lucene-core:5.3.2'
 	//	compile 'org.apache.lucene:lucene-analyzers-common:5.3.2'
-
+	// https://mvnrepository.com/artifact/org.spockframework/spock-core
+	//compile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-1'
+	//testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 
 	//for some reason ecj23 not on maven
 	//compile 'edu.gmu.cs:ecj:22'
@@ -24,4 +26,41 @@ dependencies {
 	//pick up ecj23 jar file
 	compile fileTree(dir: 'lib', include: ['*.jar'])
 	//compile files('libs/ecj23.jar')
+}
+
+task(runClustering, dependsOn: 'classes', type: JavaExec) {
+	main = 'cluster.GAmainCluster'
+	classpath = sourceSets.main.runtimeClasspath
+}
+
+task(runClassifier, dependsOn: 'classes', type: JavaExec) {
+	main = 'classify.GAmainClassify'
+	classpath = sourceSets.main.runtimeClasspath
+}
+
+configure(runClassifier) {
+	group = 'run'
+	description = 'Run the classifier'
+}
+configure(runClustering) {
+	group = 'run'
+	description = 'Run GA clustering'
+}
+
+task(indexCrisisData, dependsOn: 'classes', type: JavaExec) {
+	main = 'index.IndexCrisisClusterFromCSV'
+	classpath = sourceSets.main.runtimeClasspath
+}
+task(indexR10, dependsOn: 'classes', type: JavaExec) {
+	main = 'index.IndexR10'
+	classpath = sourceSets.main.runtimeClasspath
+}
+configure(indexR10) {
+	group = 'index'
+	description = 'IndexR10 dataset'
+}
+
+configure(indexCrisisData) {
+	group = 'index'
+	description = 'Index crisis dataset'
 }
