--- a/GA_Query_Classify_Cluster/build.gradle
+++ b/GA_Query_Classify_Cluster/build.gradle
@@ -17,8 +17,9 @@ dependencies {
 	//	compile 'org.apache.lucene:lucene-core:5.3.2'
 	//	compile 'org.apache.lucene:lucene-analyzers-common:5.3.2'
 	// https://mvnrepository.com/artifact/org.spockframework/spock-core
-	//compile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4-rc-1'
-	//testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+	
+	testCompile 'junit:junit:4.11'
+	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 
 	//for some reason ecj23 not on maven
 	//compile 'edu.gmu.cs:ecj:22'
