--- a/GA_Query_Classify_Cluster/build.gradle
+++ b/GA_Query_Classify_Cluster/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'java'
 apply plugin: 'groovy'
 
 repositories { jcenter() }
@@ -9,6 +10,10 @@ dependencies {
 
 	compile 'org.apache.lucene:lucene-core:6.1.0'
 	compile 'org.apache.lucene:lucene-analyzers-common:6.1.0'
+	
+	testCompile "org.codehaus.groovy:groovy:2.4.7"
+	
+	//compile localGroovy()
 
 	// https://mvnrepository.com/artifact/org.apache.lucene/lucene-codecs
 	//compile group: 'org.apache.lucene', name: 'lucene-codecs', version: '5.2.1'
@@ -18,9 +23,13 @@ dependencies {
 	//	compile 'org.apache.lucene:lucene-analyzers-common:5.3.2'
 	// https://mvnrepository.com/artifact/org.spockframework/spock-core
 
-	testCompile 'junit:junit:4.11'
+	//testCompile 'junit:junit:4.11'
 	testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
-
+	
+	//testCompile ('org.spockframework:spock-core:0.7-groovy-2.0') {
+	//	exclude module : 'groovy-all'
+	//}
+	//configurations.all { exclude module: "groovy-all" }
 	//for some reason ecj23 not on maven
 	//compile 'edu.gmu.cs:ecj:22'
 
