--- a/GA_Query_Classify_Cluster/gradle.properties
+++ b/GA_Query_Classify_Cluster/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.jvmargs=-Xms1024m -Xmx1024m
-#org.gradle.jvmargs=-Xms1024m -Xmx2048m
+#org.gradle.jvmargs=-Xms1024m -Xmx2048m#
+#org.gradle.daemon=true
+#org.gradle.parallel=true
+#org.gradle.configureondemand=true
+#org.gradle.parallel.threads=4
